Simulator - Fixed spacing issues, added shorter title for smaller screens

--- a/public/htmlclient/css/sim/style.css
+++ b/public/htmlclient/css/sim/style.css
@@ -548,6 +548,13 @@ input.vehicleDataValue {
     flex-basis: 58.333333333%;
 }
 
+.column-8-med {
+    max-width: 66.666666666%;
+    -ms-flex-preferred-size: 66.666666666%;
+    -webkit-flex-basis: 66.666666666%;
+    flex-basis: 66.666666666%;
+}
+
 .column-9-med {
     max-width: 75%;
     -ms-flex-preferred-size: 75%;
